--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link type="image/png" sizes="32x32" rel="icon" href="https://img.icons8.com/fluency/48/weather.png">
+    <link rel="shortcut icon" href="public/sun.ico" type="image/x-icon">    
     <title>App Clima!</title>
   </head>
   <body>
